Game with movement and score management

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,14 +9,19 @@
 
         <div class="container">
             <div id='game'>
-                <div id='gameField'>
+               <!-- <div id='gameField'>
                 </div>
+-->
+                <div id='game2'>
+                    <canvas id="gameCanvas" width="400" height="400" style="border:1px solid #d3d3d3;">
+                    Your browser does not support the HTML5 canvas tag.</canvas>
+                </div>
+                                
                 <div id='gameInfo'>
                     <div id='points'>
-                        <div>Your score:</div>
-                        <div id='score'>0</div>
-                        <div>Speed:</div>
-                        <div id='speed'>1</div>
+                        <div>SCORES</div>
+                        <div id='score'></div>
+                        
                     </div>
                     <div id='gamemsg'>
                         <div id='nextRndMsg'>Next Round!</div>
