--- a/public/css/jumbotron.css
+++ b/public/css/jumbotron.css
@@ -1,69 +1,79 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
+
 body {
     padding-top: 50px;
     padding-bottom: 20px;
 }
 
 #game {
-	width: 650px;
+    width: 650px;
+}
+
+#game2 {
+    width: 400px;
+    height: 400px;
+    float: left;
+    margin-right: 20px;
+	background: #ebe2ce;
+    position: relative;
 }
 
 #gameField {
-	width: 400px;
-	height: 400px;
-	float: left;
-	margin-right: 20px;
-	border: 4px double #1D6609;
-    background:#ebe2ce;
-	position:relative;
+    width: 400px;
+    height: 400px;
+    float: left;
+    margin-right: 20px;
+    border: 4px double #1D6609;
+    background: #ebe2ce;
+    position: relative;
 }
 
 #gameInfo {
-	width: 200px;
-	height: 400px;
-	float: left;
-	border: 1px #6f5a2d solid;
-    -moz-border-radius:15px;
-    -webkit-border-radius:15px;
-    border-radius:15px;
-    background:#ebe2ce;
-	font-family:sans-serif; 
-    font-weight:bold; 
-	text-align:center;
-	color:#792c15;
+    width: 200px;
+    height: 400px;
+    float: left;
+    border: 1px #6f5a2d solid;
+    -moz-border-radius: 15px;
+    -webkit-border-radius: 15px;
+    border-radius: 15px;
+    background: #ebe2ce;
+    font-family: sans-serif;
+    font-weight: bold;
+    text-align: center;
+    color: #792c15;
 }
 
 .bodypart {
-	height: 8px;
-	width: 8px;
-	position:absolute;
-	background: red;
-	 -moz-border-radius:2px;
-    -webkit-border-radius:2px;
-    border-radius:2px;
+    height: 8px;
+    width: 8px;
+    position: absolute;
+    background: red;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
 }
 
 #points {
-	margin:5px;
-	height:120px;
-	margin-top:15px
+    margin: 5px;
+    height: 120px;
+    margin-top: 15px
 }
 
 #rules {
-	margin:5px;	
-    font-size:12pt;
+    margin: 5px;
+    font-size: 12pt;
 }
 
 .food {
-	height: 8px;
-	width: 8px;
-	position:absolute;
-	background: green;
+    height: 8px;
+    width: 8px;
+    position: absolute;
+    background: green;
 }
 
 #gamemsg {
-	font-size:16pt;
-	margin-bottom:35px;
-	visibility:hidden;
-	color:#E01B6A;
+    font-size: 16pt;
+    margin-bottom: 35px;
+    visibility: hidden;
+    color: #E01B6A;
 }
